--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,16 @@ resources:
     - repository: templates
       type: github
       name: NSLS-II/profile-collection-ci
-      # ref: refs/heads/<branch-name>   # for future testings on a branch of NSLS-II/profile-collection-ci
+      ref: refs/heads/main
       endpoint: github
 
 jobs:
-- template: azure-linux.yml@templates  # Template reference
-  parameters:
-    beamline_acronym: CMS
+  - template: collection-2021-1.2.yml@templates
+    parameters:
+      beamline_acronym: CMS
+  - template: nsls2-collection-2021-2.2.yml@templates
+    parameters:
+      beamline_acronym: CMS
+  - template: nsls2-collection-2021-2.2-py39.yml@templates
+    parameters:
+      beamline_acronym: CMS
