CI: fix conda/mamba command

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Setup umamba
         uses: mamba-org/setup-micromamba@v1
 
-      - name: Setup umamba
+      - name: Create a conda env from Zenodo
         run: |
           set -vxeo pipefail
           url="https://zenodo.org/record/${{ matrix.zenodo-id }}/files/${CONDA_ENV_NAME}.tar.gz?download=1"
@@ -58,8 +58,8 @@ jobs:
           md5sum --check checksum.txt
           mkdir -p $HOME/${CONDA_ENV_NAME}
           tar -xf ${CONDA_ENV_NAME}.tar.gz -C $HOME/${CONDA_ENV_NAME}
-          conda activate $HOME/${CONDA_ENV_NAME}
-          conda unpack
+          ${MAMBA_EXE} activate $HOME/${CONDA_ENV_NAME}
+          conda-unpack
 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
@@ -83,6 +83,7 @@ jobs:
         run: |
           set -vxeuo pipefail
           source ~/cms-epics-containers/environment.sh
+          ${MAMBA_EXE} activate $HOME/${CONDA_ENV_NAME}
           echo "\n" | python iocs/spoof_beamline.py --list-pvs
           sleep 20
 
@@ -105,4 +106,5 @@ jobs:
               print(f'Executing {f} in CI')
               ip.parent._exec_file(f)"
 
+          ${MAMBA_EXE} activate $HOME/${CONDA_ENV_NAME}
           ipython --profile=test -c "$command"
