--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -77,7 +77,8 @@ jobs:
 
       - name: Start epics-containers
         run: |
-          git clone --depth 1 --branch CMS-IOCs https://github.com/NSLS2/cms-epics-containers.git ~/cms-epics-containers
+          # git clone --depth 1 --branch CMS-IOCs https://github.com/NSLS2/cms-epics-containers.git ~/cms-epics-containers
+          git clone --depth 1 --branch ci-gha-profile https://github.com/mrakitin/epics-containers-example-services.git ~/cms-epics-containers
           source ~/cms-epics-containers/environment.sh
           cd ~/cms-epics-containers
           docker-compose up -d
@@ -92,7 +93,11 @@ jobs:
 
       - name: Test the code
         run: |
-          set -vxeuo pipefail
+          # Start Xvfb
+          # (from https://developercommunity.visualstudio.com/content/problem/336288/headless-testing-using-xvfb-on-hosted-ubuntu-1604.html)
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16
+          export DISPLAY=:99
+
           # This is what IPython does internally to load the startup files:
           command="
           import os
