--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,8 +43,9 @@ jobs:
 
       - name: Install docker-compose
         run: |
-          sudo apt-get update
-          sudo apt-get install docker-compose-plugin
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
 
       - name: Start epics-containers
         run: |
