CI: non-blocking ping

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           .ci/bl-specific.sh
           # sudo systemctl restart systemd-networkd
-          ping info.cms.nsls2.bnl.gov -t 5
+          ping -c 5 info.cms.nsls2.bnl.gov
           echo "" | telnet info.cms.nsls2.bnl.gov 6379
 
       - name: Prepare Tiled and Kafka configs
