--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -81,11 +81,11 @@ jobs:
           ping -c 5 info.cms.nsls2.bnl.gov
           echo "" | telnet info.cms.nsls2.bnl.gov 6379
 
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: ${{ env.REPOSITORY_NAME }}
           auto-update-conda: true
-          miniconda-version: "latest"
+          miniforge-version: latest
           python-version: ${{ matrix.python-version }}
 
       # - name: Setup umamba
