--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -143,3 +143,10 @@ jobs:
 
           source ~/cms-epics-containers/environment.sh
           ipython --profile=test -c "$command"
+
+      - name: Check dir tree
+        if: always()
+        run: |
+          tree -a $HOME/cms-epics-containers/pilatus-data/
+          tree -a /nsls2/
+          ls -laF /nsls2/
