CI: uncomment the check of /nsls2/

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -149,4 +149,4 @@ jobs:
         run: |
           ls -laF /nsls2/
           tree -a $HOME/cms-epics-containers/pilatus-data/
-          # tree -a /nsls2/
+          tree -a /nsls2/
