CI: `docker-compose` -> `docker compose`; install `xorg` pkgs

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,14 +38,27 @@ jobs:
           export CONDA_ENV_NAME="${{ matrix.conda-env-version }}-py${PYTHONVER}-tiled"
           echo "CONDA_ENV_NAME=${CONDA_ENV_NAME}" >> $GITHUB_ENV
 
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xorg openbox
+
       - name: Checkout the code
         uses: actions/checkout@v4
 
-      - name: Install docker-compose
+      - name: Start docker service
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
+          sudo systemctl status docker
+          sudo systemctl start docker
+          sudo systemctl status docker
+          docker version
+          docker compose --version
+
+      # - name: Install docker-compose
+      #   run: |
+      #     sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      #     sudo chmod +x /usr/local/bin/docker-compose
+      #     docker-compose --version
 
       - name: Start epics-containers
         run: |
@@ -54,7 +67,7 @@ jobs:
           source ~/cms-epics-containers/environment.sh
           cd ~/cms-epics-containers
           mkdir ./pilatus-data/
-          docker-compose up -d
+          docker compose up -d
           sleep 20
 
       - name: Start Redis
@@ -78,7 +91,6 @@ jobs:
       - name: Run beamline-specific setup
         run: |
           .ci/bl-specific.sh
-          # sudo systemctl restart systemd-networkd
           ping -c 5 info.cms.nsls2.bnl.gov
           echo "" | telnet info.cms.nsls2.bnl.gov 6379
 
