--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -100,7 +100,7 @@ jobs:
           activate-environment: ${{ env.REPOSITORY_NAME }}
           auto-update-conda: true
           miniforge-version: latest
-          python-version: ${{ matrix.artifact.python-version }}
+          python-version: "3.10"
           conda-remove-defaults: true
 
       - name: Create a conda env from Zenodo
