--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -74,7 +74,7 @@ jobs:
 
           source $HOME/cms-epics-containers/environment.sh
           echo "EPICS_CA_ADDR_LIST=${EPICS_CA_ADDR_LIST}" >> $GITHUB_ENV
-          echo "EPICS_CA_AUTO_ADDR_LIST=${EPICS_CA_AUTO_ADDR_LIST}" >> $GITHUB_ENV
+          echo "EPICS_CA_AUTO_ADDR_LIST=NO" >> $GITHUB_ENV
 
       - name: Prepare Tiled and Kafka configs
         run: |
