CI: check if EPICS vars got propagated

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -156,6 +156,7 @@ jobs:
           conda activate $HOME/${CONDA_ENV_NAME}
 
           # source $HOME/cms-epics-containers/environment.sh
+          env | grep EPICS
           ipython --profile=test -c "$command"
 
       - name: Show bluesky logs
