CI: enable IOC tests (#3)
* CI: fix conda/mamba command

* CI: switch to conda

* CI: add missing configs

* CI: use mrakitin fork for epics-services with minor fixes

* CI: install docker-compose

* CI: install docker-compose from GH release

* CI: send caproto process to background

* CI: source env vars for IPython profile startup

* CI: run beamline specific steps

* CI: fix the config file name

* CI: configure beamline redis

* CI: more diag checks of the redis address

* CI: stop execution in scripts if there are failures

* CI: use sudo for making dirs

* CI: non-blocking ping

* CI: run redis addr diag after the service start

* CI: more tests in `drop-in.py`

* CI: mount data directory where AD will write the data

* CI: fix the target for symlink for the detector data dir

* CI: check the dir tree with the saved files after triggering the detector

* CI: check dirs simpler

* CI: uncomment the check of /nsls2/

* CI: fix the symlink to /nsls/data/

* CI: check `/nsls2/data/` contents

* CI: `docker-compose` -> `docker compose`; install `xorg` pkgs

* CI: more complex matrix

* CI: hardcode the python version to 3.10 in the base conda env

* CI: check bluesky logs after execution

* CI: use 2025-1.0 conda envs (fixed pyolog / configparser)

* CI: do not start docker systemd unit - it should be running already

* CI: move some configuration into scripts

* CI: start docker-based services earlier

* CI: update EPICS auto env var

* CI: check if EPICS vars got propagated

* CI: add env var for `DISPLAY` as well

* CI: run source command on every step involving EPICS

* CI: do not add EPICS env vars to GITHUB_ENV

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,17 +14,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        conda-env-version: ["2024-3.0"]
-        zenodo-id: ["14019710"]
-        md5-checksum: ["0ec1899a4f5989292e07380f96b97498"]
-        python-version: ["3.10"]  # , "3.11", "3.12"]
+        zenodo-deposition:
+          # https://zenodo.org/records/14862443
+          - env-version: "2025-1.0"
+            zenodo-id: "14862443"
+        artifact:
+          - python-version: "3.10"
+            md5-checksum: "d031ed24ad7beebb836f93712d8def2e"
+          - python-version: "3.11"
+            md5-checksum: "3b1074c0827ee3baf0cdcd64917b9afa"
+          - python-version: "3.12"
+            md5-checksum: "624239ed0846ef95d8334ea100581b83"
       fail-fast: false
     env:
       TZ: America/New_York
 
     defaults:
       run:
-        shell: bash -l {0}
+        shell: bash -leo pipefail {0}
 
     steps:
       - name: Set env vars
@@ -32,63 +39,109 @@ jobs:
           export REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}  # just the repo, as opposed to org/repo
           echo "REPOSITORY_NAME=${REPOSITORY_NAME}" >> $GITHUB_ENV
 
-          export PYTHONVER=$(echo ${{ matrix.python-version }} | sed 's/\.//g')
+          export PYTHONVER=$(echo ${{ matrix.artifact.python-version }} | sed 's/\.//g')
           echo "PYTHONVER=${PYTHONVER}" >> $GITHUB_ENV
 
-          export CONDA_ENV_NAME="${{ matrix.conda-env-version }}-py${PYTHONVER}-tiled"
+          export CONDA_ENV_NAME="${{ matrix.zenodo-deposition.env-version }}-py${PYTHONVER}-tiled"
           echo "CONDA_ENV_NAME=${CONDA_ENV_NAME}" >> $GITHUB_ENV
+
+          export BLUESKY_KAFKA_CONFIG_PATH="$HOME/.config/bluesky/kafka.yml"
+          echo "BLUESKY_KAFKA_CONFIG_PATH=${BLUESKY_KAFKA_CONFIG_PATH}" >> $GITHUB_ENV
+
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xorg openbox
+
+      - name: Check Docker version
+        run: |
+          docker version
+          docker compose --version
+
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.0.0
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.6.0
 
       - name: Checkout the code
         uses: actions/checkout@v4
 
-      - name: Setup umamba
-        uses: mamba-org/setup-micromamba@v1
-
-      - name: Setup umamba
+      - name: Configure epics-containers
         run: |
-          set -vxeo pipefail
-          url="https://zenodo.org/record/${{ matrix.zenodo-id }}/files/${CONDA_ENV_NAME}.tar.gz?download=1"
+          # git clone --depth 1 --branch CMS-IOCs https://github.com/NSLS2/cms-epics-containers.git $HOME/cms-epics-containers
+          git clone --depth 1 --branch ci-gha-profile https://github.com/mrakitin/epics-containers-example-services.git $HOME/cms-epics-containers
+
+          # source $HOME/cms-epics-containers/environment.sh
+          # echo "EPICS_CA_ADDR_LIST=${EPICS_CA_ADDR_LIST}" >> $GITHUB_ENV
+
+      - name: Prepare Tiled and Kafka configs
+        run: |
+          .ci/tiled-config.sh
+          .ci/kafka-config.sh
+
+      - name: Run beamline-specific setup
+        run: |
+          .ci/bl-specific.sh
+
+      - name: Start epics-containers
+        run: |
+          cd $HOME/cms-epics-containers
+          source $HOME/cms-epics-containers/environment.sh
+          docker compose up -d
+          sleep 20
+
+      - name: Check Docker state
+        run: |
+          docker images
+          docker ps -a
+          docker network ls
+          docker volume ls
+
+      - name: Check Docker logs
+        run: |
+          cd $HOME/cms-epics-containers
+          docker compose logs
+
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          activate-environment: ${{ env.REPOSITORY_NAME }}
+          auto-update-conda: true
+          miniforge-version: latest
+          python-version: "3.10"
+          conda-remove-defaults: true
+
+      - name: Create a conda env from Zenodo
+        run: |
+          url="https://zenodo.org/record/${{ matrix.zenodo-deposition.zenodo-id }}/files/${CONDA_ENV_NAME}.tar.gz?download=1"
           wget --progress=dot:giga ${url} -O ${CONDA_ENV_NAME}.tar.gz
           status=$?
           if [ $status -gt 0 ]; then
               echo "Cannot download from ${url}. Exit code: ${status}"
               exit $status
           fi
-          echo "${{ matrix.md5-checksum }} ${CONDA_ENV_NAME}.tar.gz" > checksum.txt
+          echo "${{ matrix.artifact.md5-checksum }} ${CONDA_ENV_NAME}.tar.gz" > checksum.txt
           md5sum --check checksum.txt
           mkdir -p $HOME/${CONDA_ENV_NAME}
+          echo "Unarchiving the tarball..."
           tar -xf ${CONDA_ENV_NAME}.tar.gz -C $HOME/${CONDA_ENV_NAME}
           conda activate $HOME/${CONDA_ENV_NAME}
-          conda unpack
-
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
-
-      - name: Prepare databroker config
-        run: |
-          set -vxeuo pipefail
-          mkdir -v -p $HOME/.config/databroker/
-          cp -v configs/databroker/local.yml $HOME/.config/databroker/
-
-      - name: Start epics-containers
-        run: |
-          set -vxeuo pipefail
-          git clone --depth 1 --branch CMS-IOCs https://github.com/NSLS2/cms-epics-containers.git ~/cms-epics-containers
-          source ~/cms-epics-containers/environment.sh
-          cd ~/cms-epics-containers
-          docker-compose up -d
-          sleep 20
+          conda-unpack
 
       - name: Start caproto IOC
         run: |
-          set -vxeuo pipefail
-          source ~/cms-epics-containers/environment.sh
-          echo "\n" | python iocs/spoof_beamline.py --list-pvs
+          source $HOME/cms-epics-containers/environment.sh
+          conda activate $HOME/${CONDA_ENV_NAME}
+          echo "\n" | python iocs/spoof_beamline.py --list-pvs &
           sleep 20
 
       - name: Test the code
         run: |
-          set -vxeuo pipefail
+          # Start Xvfb
+          # (from https://developercommunity.visualstudio.com/content/problem/336288/headless-testing-using-xvfb-on-hosted-ubuntu-1604.html)
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16
+          export DISPLAY=:99
+
           # This is what IPython does internally to load the startup files:
           command="
           import os
@@ -105,4 +158,20 @@ jobs:
               print(f'Executing {f} in CI')
               ip.parent._exec_file(f)"
 
+          conda activate $HOME/${CONDA_ENV_NAME}
+
+          source $HOME/cms-epics-containers/environment.sh
+          env | grep EPICS
           ipython --profile=test -c "$command"
+
+      - name: Show bluesky logs
+        if: always()
+        run: |
+          cat $HOME/.cache/bluesky/log/bluesky.log
+
+      - name: Check dir tree
+        if: always()
+        run: |
+          ls -laF /nsls2/
+          tree -a $HOME/cms-epics-containers/pilatus-data/
+          tree -a /nsls2/data/
